--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     </nav>
 
     <div class="content">
-        <h1>Welcome to My World</h1>
+        <h1>Who I am</h1>
         
         <div class="info-container">
             <!-- Software Developer Section -->
             <div class="info-box">
-                <h1>Developing software developer</h1>
+                <h1>a developing software developer</h1>
                 <p>My foundational knowledge covers:</p>
                 <ul class="tech-list">
                     <li><i class="fab fa-html5"></i> HTML</li>
@@ -39,7 +39,7 @@
 
             <!-- Tour Guide Section -->
             <div class="info-box">
-                <h1>Internationally experienced tour guide</h1>
+                <h1>an internationally experienced tour guide</h1>
                 <p>I showed my country, Ecuador, to visitors from over 15 countries:</p>
                 <div class="country-list-container">
                     <ul class="country-list right-align">
@@ -68,7 +68,7 @@
 
             <!-- Polyglot Section -->
             <div class="info-box">
-                <h1>Incurable polyglot</h1>
+                <h1>and incurable polyglot</h1>
                 <p>I speak:</p>
                 <ul class="language-list">
                         <li>Spanish</li>
